--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ middleWare/upload.js
 pg.js
 ./images
 models/photos.js
+images/1020064.jpg
+images/1143518.jpg
+images/2732388.jpg
+images/4461739.jpg
