--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,28 @@ images/1020064.jpg
 images/1143518.jpg
 images/2732388.jpg
 images/4461739.jpg
+images/574795.jpg
+images/972503.jpg
+images/1416741.jpg
+images/1679228.jpg
+images/2224484.jpg
+images/3243843.jpg
+images/3243844.jpg
+images/3452709.jpg
+images/3591338.jpg
+images/3938535.jpg
+images/4078939.jpg
+images/4380679.jpg
+images/4566939.jpg
+images/5090802.jpg
+images/5339363.jpg
+images/6026502.jpg
+images/6927495.jpg
+images/7020988.jpg
+images/7277080.jpg
+images/7470000.jpg
+images/7738188.jpg
+images/7951960.jpg
+images/9173175.jpg
+images/9423771.jpg
+images/9750620.jpg
